add redirect for wikivoyage.de to .org
Change-Id: I072af39e015f8b85c4da4903ad7052c5e022a607

--- a/redirects.conf
+++ b/redirects.conf
@@ -103,6 +103,7 @@
         wiktionary.cz *.wiktionary.cz \
         wikisource.com *.wikisource.com commons.wikipedia.org \
         www.commons.wikipedia.org www.commons.wikimedia.org \
+        wikivoyage.de *.wikivoyage.de \
         wiki.mediawiki.org \
         wikipedia.info *.wikipedia.info \
         wiktionary.com *.wiktionary.com \
@@ -459,6 +460,13 @@
     # two / cause actual (2004 10 22) redirect is wrong
     RewriteCond %{HTTP_HOST} (^|\.)wikispecies\.(com|org|net)$
     RewriteRule ^//?(.*)$ http://species.wikipedia.org/$1 [R=301,L]
+
+    # Wikivoyage
+    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.de
+    RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =wikivoyage.de
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     # wikimediafoundation
     RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net)$ [OR]
