Add config for www.wikivoyage.org portal
Change-Id: Ifb4eb67e969f582887e606ff177746ce3e5a998e

--- a/www.wikipedia.conf
+++ b/www.wikipedia.conf
@@ -183,5 +183,35 @@
     RewriteRule ^(.*)$ http://en.wikibooks.org$1 [R=301,L]
 </VirtualHost>
 
+<VirtualHost *>
+    ServerName wikivoyage.org
+    Redirect permanent / http://www.wikivoyage.org/
+</VirtualHost>
+
+<VirtualHost *>
+    ServerName www.wikivoyage.org
+    #ServerAlias wikivoyage.org
+
+#    DocumentRoot /usr/local/apache/htdocs/www
+    DocumentRoot /usr/local/apache/common/docroot/www.wikivoyage.org
+    php_admin_flag engine on
+
+    RewriteEngine On
+
+    # Send non www to the www page
+    #RewriteCond %{HTTP_HOST}   !^wikivoyage\.org$ [NC]
+    #RewriteCond %{HTTP_HOST}   !^$
+    ##RewriteRule ^/(.*)         http://www.wikivoyage.org/$1 [L,R,NE]
+
+    # Front page...
+    RewriteRule ^/$ /w/extract2.php?title=Www.wikivoyage.org_portal&template=Www.wikivoyage.org_template [L]
+
+    # search-redirect.php, let it through
+    RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
+
+    # Everything else
+    RewriteRule ^(.*)$ http://en.wikivoyage.org$1 [R=301,L]
+</VirtualHost>
+
 # vim: sts=4 sw=4 syn=apache autoindent
 
