main.conf - turn wikivoyage ServerAlias into * again vs. single languages
Change-Id: I92cab01821bece1f2341a517af47443adcbdd1a7

--- a/main.conf
+++ b/main.conf
@@ -635,13 +635,7 @@
     ServerName wikivoyage
 
     # These can be combined into *.wikivoyage when we know we're done importing
-    ServerAlias nl.wikivoyage.org
-    ServerAlias ru.wikivoyage.org
-    ServerAlias sv.wikivoyage.org
-    ServerAlias fr.wikivoyage.org
-    ServerAlias en.wikivoyage.org
-    ServerAlias de.wikivoyage.org
-    ServerAlias it.wikivoyage.org
+    ServerAlias *.wikivoyage.org
 
     UseCanonicalName off
     DocumentRoot "/usr/local/apache/common/docroot/wikivoyage.org"
