Fix www -> en bug
Change-Id: I98ccb624f3a0af71e6ec62d8a505c4f787d61cfd

--- a/main.conf
+++ b/main.conf
@@ -649,8 +649,8 @@
     RewriteRule ^/$ http://en.wikivoyage.org/wiki/Main_Page [R=301,L]
 
     # www -> en
-    RewriteCond %{HTTP_HOST} www.wikivoyage.org
-    RewriteRule ^/(.*$) http://en.wikivoyage.org/$1 [R=301,L]
+    # RewriteCond %{HTTP_HOST} www.wikivoyage.org
+    # RewriteRule ^/(.*$) http://en.wikivoyage.org/$1 [R=301,L]
 
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
