Fix redirect to old-style /de and /it urls
Change-Id: I6058de3358f6121700c2e586ec2a4f6c013e593d

--- a/www.wikipedia.conf
+++ b/www.wikipedia.conf
@@ -209,6 +209,11 @@
     # search-redirect.php, let it through
     RewriteRule ^/search-redirect.php /w/search-redirect.php [L]
 
+    # Old /de
+    RewriteRule ^/de/(.*)$ http://de.wikivoyage.org/wiki/$1 [R=301,L]
+    # Old /it
+    RewriteRule ^/it/(.*)$ http://it.wikivoyage.org/wiki/$1 [R=301,L]
+
     # Everything else
     RewriteRule ^(.*)$ http://en.wikivoyage.org$1 [R=301,L]
 </VirtualHost>
