wikivoyage - disable "de" to investigate data consistency issues
Change-Id: I4c2db94090ae860eb2790f3d41ecd6c6463cc384

--- a/main.conf
+++ b/main.conf
@@ -635,7 +635,16 @@
     ServerName wikivoyage
 
     # These can be combined into *.wikivoyage when we know we're done importing
-    ServerAlias *.wikivoyage.org
+    # ServerAlias *.wikivoyage.org
+
+    ServerAlias nl.wikivoyage.org
+    ServerAlias ru.wikivoyage.org
+    ServerAlias sv.wikivoyage.org
+    ServerAlias fr.wikivoyage.org
+    ServerAlias en.wikivoyage.org
+    # de dump has issues
+    # ServerAlias de.wikivoyage.org
+    ServerAlias it.wikivoyage.org
 
     UseCanonicalName off
     DocumentRoot "/usr/local/apache/common/docroot/wikivoyage.org"
