--- a/redirects.conf
+++ b/redirects.conf
@@ -189,77 +189,77 @@
     RewriteCond %{HTTP_HOST} =donate.wikispecies.org [OR]
     RewriteCond %{HTTP_HOST} =donate.wikiversity.org [OR]
     RewriteCond %{HTTP_HOST} =donate.wiktionary.org
-    RewriteRule ^(.*)$ https://donate.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ https://donate.wikimedia.org$1 [R=301,L,NE]
 
     # Language aliases
 
     RewriteCond %{HTTP_HOST} =de-beta.wikipedia.org
-    RewriteRule ^(.*)$ http://de.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://de.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wikipedia.com
-    RewriteRule ^(.*)$ http://cs.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikibooks.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wikibooks.com
-    RewriteRule ^(.*)$ http://cs.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikibooks.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikiquote.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wikiquote.com
-    RewriteRule ^(.*)$ http://cs.wikiquote.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikiquote.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikisource.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wikisource.com
-    RewriteRule ^(.*)$ http://cs.wikisource.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikisource.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikiversity.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wikiversity.com
-    RewriteRule ^(.*)$ http://cs.wikiversity.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikiversity.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wiktionary.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wiktionary.com
-    RewriteRule ^(.*)$ http://cs.wiktionary.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wiktionary.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikinews.org [OR]
     RewriteCond %{HTTP_HOST} =cz.wikinews.com
-    RewriteRule ^(.*)$ http://cs.wikinews.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikinews.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =dk.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =dk.wikipedia.com
-    RewriteRule ^(.*)$ http://da.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://da.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =dk.wikibooks.org [OR]
     RewriteCond %{HTTP_HOST} =dk.wikibooks.com
-    RewriteRule ^(.*)$ http://da.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://da.wikibooks.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =dk.wiktionary.org [OR]
     RewriteCond %{HTTP_HOST} =dk.wiktionary.com
-    RewriteRule ^(.*)$ http://da.wiktionary.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://da.wiktionary.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =epo.wikipedia.org
-    RewriteRule ^(.*)$ http://eo.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://eo.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =sep11.wikipedia.org
     RewriteRule . http://wayback.archive.org/web/20030315000000*/http://sep11.wikipedia.org/wiki/In_Memoriam [R=301,L]
 
     RewriteCond %{HTTP_HOST} =jp.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =jp.wikipedia.com
-    RewriteRule ^(.*)$ http://ja.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://ja.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =nb.wikipedia.org
-    RewriteRule ^(.*)$ http://no.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://no.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =tp.wikipedia.org
-    RewriteRule ^(.*)$ http://tokipona.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://tokipona.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =zh-cfr.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =minnan.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =nan.wikipedia.org
-    RewriteRule ^(.*)$ http://zh-min-nan.wikipedia.org$1 [R=302,L]
+    RewriteRule ^(.*)$ http://zh-min-nan.wikipedia.org$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} =zh-cn.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =zh-tw.wikipedia.org
-    RewriteRule ^(.*)$ http://zh.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://zh.wikipedia.org$1 [R=301,L,NE]
 
 
     # Wikibooks
@@ -273,18 +273,18 @@
     RewriteCond %{HTTP_HOST} =wikibooks.org [OR]
     RewriteCond %{HTTP_HOST} =wikibooks.com [OR]
     RewriteCond %{HTTP_HOST} =www.wikibooks.com
-    RewriteRule ^(.*)$ http://en.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://en.wikibooks.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikibooks.de [OR]
     RewriteCond %{HTTP_HOST} =www.wikibooks.de
-    RewriteRule ^(.*)$ http://de.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://de.wikibooks.org$1 [R=301,L,NE]
 
     # *.wikibooks.com or *.wikibook.com -> org
     RewriteCond %{HTTP_HOST} ^(.*)\.wikibooks?\.com$
-    RewriteRule ^(.*)$ http://%1.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://%1.wikibooks.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =textbook.wikipedia.org
-    RewriteRule ^(.*)$ http://wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://wikibooks.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} ^(.*\.)?wikijunior\.(org|com|net)$
     RewriteRule . http://en.wikibooks.org/wiki/Wikijunior [R=302,L]
@@ -296,12 +296,12 @@
     RewriteCond %{HTTP_HOST} =wikipedia.net [OR]
     RewriteCond %{HTTP_HOST} =www.wikipedia.com [OR]
     RewriteCond %{HTTP_HOST} =www.wikipedia.net
-    RewriteRule ^(.*)$ http://www.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =en.wikipedia.com [OR]
     RewriteCond %{HTTP_HOST} =en2.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} (^|\.)wikipedia\.co\.uk$
-    RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
 
     # Redirect with NE flag since otherwise, Apache converts the percent
     # characters to %25. If you just give it UTF-8 in its conf file, it
@@ -329,62 +329,62 @@
     RewriteRule . http://outreach.wikimedia.org/wiki/Wikipedia_Education_Program [R=301,L]
 
     RewriteCond %{HTTP_HOST} ^(.+)\.wikipedia\.(com|net|info)$
-    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} ^www\.(.+)\.wikipedia\.(com|org|info)$
-    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} ^(.+)\.wiki-pedia\.org$
-    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} ^(.+)\.wikipaedia\.net$
-    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://%1.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipaedia.net
-    RewriteRule ^(.*)$ http://www.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} ^(.+)\.wikiversity\.(com|net|info)$
-    RewriteRule ^(.*)$ http://%1.wikiversity.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://%1.wikiversity.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikiversity.com [OR]
     RewriteCond %{HTTP_HOST} =wikiversity.net [OR]
     RewriteCond %{HTTP_HOST} =wikiversity.info
-    RewriteRule ^(.*)$ http://wikiversity.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://wikiversity.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.(net|info|mobi|eu|org)$
-    RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L,NE]
 
     # Localised TLDs
 
     RewriteCond %{HTTP_HOST} (^|\.)wicipediacymraeg\.org$
-    RewriteRule ^(.*)$ http://cy.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cy.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipedia.org.il
-    RewriteRule ^(.*)$ http://he.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://he.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikipedia.com.il
-    RewriteRule ^(.*)$ http://he.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://he.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)vikimedija\.org$
-    RewriteRule ^(.*)$ http://rs.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://rs.wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikibooks\.cz$
-    RewriteRule ^(.*)$ http://cs.wikibooks.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikibooks.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikicitaty\.cz$
-    RewriteRule ^(.*)$ http://cs.wikiquote.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikiquote.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikidruhy\.cz$
-    RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikiquote\.cz$
-    RewriteRule ^(.*)$ http://cs.wikiquote.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikiquote.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikisource\.cz$
-    RewriteRule ^(.*)$ http://cs.wikisource.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://cs.wikisource.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikispecies\.cz$
-    RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikiversity\.cz$
     RewriteRule ^(.*)$ http://cs.wikiversity.org$1 [R=301,L]
@@ -507,28 +507,28 @@
 
     RewriteCond %{HTTP_HOST} =commons.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =www.commons.wikimedia.org
-    RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =species.wikipedia.org
-    RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://species.wikimedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =bugzilla.wikipedia.org [OR]
     RewriteCond %{HTTP_HOST} =bugs.mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} =bugzilla.mediawiki.org
-    RewriteRule ^(.*)$ https://bugzilla.wikimedia.org$1 [R=302,L]
+    RewriteRule ^(.*)$ https://bugzilla.wikimedia.org$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} =mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} (^|\.)mediawiki\.com$
-    RewriteRule ^(.*)$ http://www.mediawiki.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://www.mediawiki.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
-    RewriteRule ^(.*)$ http://nostalgia.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://nostalgia.wikipedia.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =hu.wikimedia.org
-    RewriteRule ^(.*)$ http://wiki.media.hu$1 [R=302,L]
+    RewriteRule ^(.*)$ http://wiki.media.hu$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} =it.wikimedia.org
-    RewriteRule ^(.*)$ http://www.wikimedia.it$1 [R=302,L]
+    RewriteRule ^(.*)$ http://www.wikimedia.it$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} =cz.wikimedia.org [OR]
     RewriteCond %{HTTP_HOST} =cs.wikimedia.org
@@ -537,14 +537,14 @@
     # pt.wikimedia.org got moved to wikimedia.pt
 
     RewriteCond %{HTTP_HOST} =pt.wikimedia.org
-    RewriteRule ^/wiki/(.*)$ http://wikimedia.pt/$1 [R=301,L]
+    RewriteRule ^/wiki/(.*)$ http://wikimedia.pt/$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =pt.wikimedia.org
     RewriteRule .  http://wikimedia.pt/ [R=301,L]
 
     # Wikimania
     RewriteCond %{HTTP_HOST} =wikimania.wikimedia.org
-    RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L]
+    RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
 
     # labs -> labsconsole
     RewriteCond %{HTTP_HOST} =labs.wikimedia.org
@@ -552,7 +552,7 @@
 
     # Redirecting from subdirectories of wikipedia.org to subdomains
     RewriteCond %{HTTP_HOST} =wikipedia.org
-    RewriteRule ^/([a-z]{2}|meta)/(.*)$ http://$1.wikipedia.org/wiki/$2 [R=301,L]
+    RewriteRule ^/([a-z]{2}|meta)/(.*)$ http://$1.wikipedia.org/wiki/$2 [R=301,L,NE]
 
     # wikimedia.com redirect
     RewriteCond %{HTTP_HOST} wikimedia\.com$
@@ -562,10 +562,10 @@
     # TODO: this is not a human-usable site, can be killed (along with its DNS record)
     # sometime in 2013
     RewriteCond %{HTTP_HOST} =wlm.wikimedia.org
-    RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L]
+    RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L,NE]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
-    RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L]
+    RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
 
 </VirtualHost>
 
