add wikivoyage.com redirects
Change-Id: Ia557185379d7664ee690eff4f753fc466fc7b84d

--- a/redirects.conf
+++ b/redirects.conf
@@ -104,6 +104,7 @@
         wikisource.com *.wikisource.com commons.wikipedia.org \
         www.commons.wikipedia.org www.commons.wikimedia.org \
         wikivoyage.de *.wikivoyage.de \
+        wikivoyage.com *.wikivoyage.com \
         wiki.mediawiki.org \
         wikipedia.info *.wikipedia.info \
         wiktionary.com *.wiktionary.com \
@@ -466,6 +467,12 @@
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} =wikivoyage.de
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.com
+    RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =wikivoyage.com
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     # wikimediafoundation
