add redirects for wikipedia.bg to bg.wikipedia.org
Change-Id: I3bcd84d8ba659d4ade5e880ec88f78e20dbf5b24

--- a/redirects.conf
+++ b/redirects.conf
@@ -80,6 +80,7 @@
         wikiknihy.cz *.wikiknihy.cz \
         wikipaedia.net *.wikipaedia.net \
         wiki-pedia.org *.wiki-pedia.org \
+        wikipedia.bg *.wikipedia.bg \
         wikipedia.co.uk *.wikipedia.co.uk \
         wikipedia.cz *.wikipedia.cz \
         wikipedia.lt *.wikipedia.lt \
@@ -132,7 +133,7 @@
         shop.mediawiki.org store.mediawiki.org \
         shop.wikimediafoundation.org store.wikimediafoundation.org \
         shop.wikipedia.org store.wikipedia.org \
-	wlm.wikimedia.org
+        wlm.wikimedia.org
 
     # allow caching for redirects
     <IfModule mod_headers.c>
@@ -368,6 +369,9 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)vikimedija\.org$
     RewriteRule ^(.*)$ http://rs.wikimedia.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} (^|\.)wikipedia\.bg$
+    RewriteRule ^(.*)$ http://bg.wikipedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikibooks\.cz$
     RewriteRule ^(.*)$ http://cs.wikibooks.org$1 [R=301,L]
