add redirect for wikivoyage.net and save a few code lines by using a regex for .com, .de and .net
Change-Id: I3268a0c442c31280f3c7c0d039756ee3aac9ee29

--- a/redirects.conf
+++ b/redirects.conf
@@ -106,6 +106,7 @@
         www.commons.wikipedia.org www.commons.wikimedia.org \
         wikivoyage.de *.wikivoyage.de \
         wikivoyage.com *.wikivoyage.com \
+        wikivoyage.net *.wikivoyage.net \
         wiki.mediawiki.org \
         wikipedia.info *.wikipedia.info \
         wiktionary.com *.wiktionary.com \
@@ -467,16 +468,10 @@
     RewriteRule ^//?(.*)$ http://species.wikipedia.org/$1 [R=301,L]
 
     # Wikivoyage
-    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.de
+    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.(com|de|net)$
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} =wikivoyage.de
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
-
-    RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.com
-    RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
-
-    RewriteCond %{HTTP_HOST} =wikivoyage.com
+    RewriteCond %{HTTP_HOST} =wikivoyage.(com|de|net)
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     # wikimediafoundation
