wikivoyage.[com|de|net] redirects - break out into seprate rules again, can just summarize the first part, second part would not work like this
Change-Id: I11bb5aff81c6bd13debd4a4ef24cdbd86fdf288a

--- a/redirects.conf
+++ b/redirects.conf
@@ -104,8 +104,8 @@
         wiktionary.cz *.wiktionary.cz \
         wikisource.com *.wikisource.com commons.wikipedia.org \
         www.commons.wikipedia.org www.commons.wikimedia.org \
-        wikivoyage.de *.wikivoyage.de \
         wikivoyage.com *.wikivoyage.com \
+        wikivoyage.de *.wikivoyage.de \
         wikivoyage.net *.wikivoyage.net \
         wiki.mediawiki.org \
         wikipedia.info *.wikipedia.info \
@@ -471,7 +471,13 @@
     RewriteCond %{HTTP_HOST} (.+)\.wikivoyage.(com|de|net)$
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} =wikivoyage.(com|de|net)
+    RewriteCond %{HTTP_HOST} =wikivoyage.com
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =wikivoyage.de
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} =wikivoyage.net
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     # wikimediafoundation
