add Apache redirect support for wikipedia.co.za -> af.wp
Change-Id: Id0165ebdda8c3d497be0f4fc8a6ab3845ea42099

--- a/redirects.conf
+++ b/redirects.conf
@@ -88,6 +88,7 @@
         wikipedia.net *.wikipedia.net \
         wikipedia.org.il *.wikipedia.org.il \
         wikipedia.com.il *.wikipedia.com.il \
+        wikipedia.co.za *.wikipedia.co.za \
         wikipedie.cz *.wikipedie.cz \
         wikiquote.com *.wikiquote.com\
         wikiquote.cz *.wikiquote.cz \
@@ -373,6 +374,9 @@
 
     RewriteCond %{HTTP_HOST} (^|\.)wikipedia\.bg$
     RewriteRule ^(.*)$ http://bg.wikipedia.org$1 [R=301,L]
+
+    RewriteCond %{HTTP_HOST} (^|\.)wikipedia\.co\.za$
+    RewriteRule ^(.*)$ http://af.wikipedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikibooks\.cz$
     RewriteRule ^(.*)$ http://cs.wikibooks.org$1 [R=301,L]
