--- a/project.config
+++ b/project.config
@@ -7,9 +7,8 @@
 	mergeContent = true
 [access "refs/*"]
 	owner = group Administrators
+	owner = group ops
 	read = group Anonymous Users
-	label-Code-Review = -2..+2 group ops
 	label-Code-Review = -1..+1 group wmf
-	label-Verified = -1..+1 group ops
 	submit = group ops
 	create = group ops
