Changes for git-deploy
Updated directory locations. Everything was in common and will stay in
the same relative location in common, so migration will be easy.

Also removed some commented-out sections and obsolete files. Removed
secure.wikimedia.org per Id9493e8c.

Change-Id: Ife2526431882344465af96c94947d50c958f229a

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -1,25 +1,4 @@
 
-
-# German verein -- HOSTED OFFSITE
-#<VirtualHost *>
-#    DocumentRoot "/usr/local/apache/htdocs/wikimedia.de"
-#    ServerName wikimedia.de
-#    ServerAlias www.wikimedia.de *.wikimedia.de
-#
-#    AddDefaultCharset utf-8
-#    DirectoryIndex index.html index.php
-#    <Directory "/usr/local/apache/htdocs/wikimedia.de/">
-#      <IfModule mod_php5.c>
-#        php_admin_flag engine on
-#        php_admin_value open_basedir "/usr/local/apache/htdocs/wikimedia.de/"
-#
-#        AllowOverride All
-#      </IfModule>
-#    </Directory>
-#    ExpiresDefault "access plus 1 hour"
-#
-#</VirtualHost>
-
 <VirtualHost *>
     ServerName ch.wikimedia.org
     RewriteEngine On
@@ -31,7 +10,7 @@
     ServerName wikimedia-chapter
     ServerAlias no.wikimedia.org nl.wikimedia.org www.nl.wikimedia.org pl.wikimedia.org nz.wikimedia.org il.wikimedia.org rs.wikimedia.org pa.us.wikimedia.org uk.wikimedia.org us.wikimedia.org se.wikimedia.org ru.wikimedia.org ua.wikimedia.org co.wikimedia.org fi.wikimedia.org ve.wikimedia.org br.wikimedia.org dk.wikimedia.org tr.wikimedia.org noboard.chapters.wikimedia.org mk.wikimedia.org et.wikimedia.org nyc.wikimedia.org mx.wikimedia.org ar.wikimedia.org bd.wikimedia.org be.wikimedia.org
     UseCanonicalName off
-    DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
+    DocumentRoot "/srv/deployment/mediawiki/common/docroot/wikimedia.org"
 
     AllowEncodedSlashes On
 
@@ -45,7 +24,7 @@
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikimedia.org/%1/$1 [R=302]
 
     # Primary wiki redirector:
-    Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
+    Alias /wiki /srv/deployment/mediawiki/common/docroot/wikimedia.org/w/index.php
     RewriteRule ^/$ /w/index.php
 
     # www. prefix
@@ -59,12 +38,12 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
+    <Directory "/srv/deployment/mediawiki/common/docroot/wikimedia.org/w">
        <IfModule mod_php5.c>
            php_admin_flag engine on
         </IfModule>
     </Directory>
-    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
+    <Directory "/srv/deployment/mediawiki/common/docroot/wikimedia.org/w/extensions">
        <IfModule mod_php5.c>
            php_admin_flag engine off
         </IfModule>
@@ -83,7 +62,7 @@
     ServerName wikimedia-labs
     ServerAlias *.labs.wikimedia.org
     UseCanonicalName off
-    DocumentRoot "/usr/local/apache/common/docroot/wikimedia.org"
+    DocumentRoot "/srv/deployment/mediawiki/common/docroot/wikimedia.org"
 
     AllowEncodedSlashes On
 
@@ -97,7 +76,7 @@
     RewriteRule ^/upload/(.*)$ http://upload.wikimedia.org/wikimedia.org/%1/$1 [R=302]
 
     # Primary wiki redirector:
-    Alias /wiki /usr/local/apache/common/docroot/wikimedia.org/w/index.php
+    Alias /wiki /srv/deployment/mediawiki/common/docroot/wikimedia.org/w/index.php
     RewriteRule ^/$ /w/index.php
 
     # UseMod compatibility URLs
@@ -107,12 +86,12 @@
 
     RewriteRule ^/math/(.*) http://upload.wikimedia.org/math/$1 [R=301]
 
-    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w">
+    <Directory "/srv/deployment/mediawiki/common/docroot/wikimedia.org/w">
        <IfModule mod_php5.c>
            php_admin_flag engine on
         </IfModule>
     </Directory>
-    <Directory "/usr/local/apache/common/docroot/wikimedia.org/w/extensions">
+    <Directory "/srv/deployment/mediawiki/common/docroot/wikimedia.org/w/extensions">
        <IfModule mod_php5.c>
            php_admin_flag engine off
         </IfModule>
@@ -123,22 +102,22 @@
 </VirtualHost>
 
 <VirtualHost *>
-    DocumentRoot "/usr/local/apache/common/docroot/bits/"
+    DocumentRoot "/srv/deployment/mediawiki/common/docroot/bits/"
     ServerName bits.wikimedia.org
 
     # Version-independent aliases for backwards-compatibility
-    Alias /w/extensions/ /usr/local/apache/common/docroot/wikimedia.org/w/extensions/
-    Alias /skins-1.5/ /usr/local/apache/common/php/skins/
-    Alias /skins/ /usr/local/apache/common/php/skins/
+    Alias /w/extensions/ /srv/deployment/mediawiki/common/docroot/wikimedia.org/w/extensions/
+    Alias /skins-1.5/ /srv/deployment/mediawiki/common/php/skins/
+    Alias /skins/ /srv/deployment/mediawiki/common/php/skins/
 
-    Alias /images/ /apache/common/images/
+    Alias /images/ /srv/deployment/mediawiki/common/images/
     Alias /centralnotice/ /mnt/upload6/centralnotice/
     <IfModule mod_php5.c>
 	php_admin_flag engine off
     </IfModule>
     # Aliases for 1.17 wikis
-    Alias /w/extensions-1.17/ /usr/local/apache/common/live-1.5/extensions-1.17/
-    Alias /skins-1.17/ /usr/local/apache/common/live-1.5/skins-1.17/
+    Alias /w/extensions-1.17/ /srv/deployment/mediawiki/common/live-1.5/extensions-1.17/
+    Alias /skins-1.17/ /srv/deployment/mediawiki/common/live-1.5/skins-1.17/
 </VirtualHost>
 
 # job.w.o
@@ -158,8 +137,7 @@
 
 # wikimedia.org
 <VirtualHost *>
-#    DocumentRoot "/usr/local/apache/htdocs/wikimedia"
-    DocumentRoot "/usr/local/apache/common/docroot/www.wikimedia.org"
+    DocumentRoot "/srv/deployment/mediawiki/common/docroot/www.wikimedia.org"
     ServerName www.wikimedia.org
     ServerAlias *.wikimedia.org
 
@@ -174,76 +152,15 @@
     AddDefaultCharset Off
     ExpiresActive On
 
-#  <Directory "/usr/local/apache/htdocs/wikimedia/stats">
-#    ExpiresByType image/gif A0
-#    ExpiresByType image/png A0
-#    ExpiresByType image/jpeg A0
-#    ExpiresByType text/css A2592000
-#    ExpiresByType text/javascript A2592000
-#    ExpiresByType application/x-javascript A2592000
-#    ExpiresByType text/html A0
-#  </Directory>
-#  <Directory "/usr/local/apache/htdocs/wikimedia/squid">
-#  Options ExecCGI
-#  AddHandler cgi-script .cgi
-#  DirectoryIndex index.html index.cgi
-#  ExpiresByType image/gif A0
-#    ExpiresByType image/png A0
-#    ExpiresByType image/jpeg A0
-#    ExpiresByType text/css A2592000
-#    ExpiresByType text/javascript A2592000
-#    ExpiresByType application/x-javascript A2592000
-#  </Directory>
-#
-#  <Directory "/usr/local/apache/htdocs/wikimedia/ganglia">
-#    php_admin_flag engine on
-#    ExpiresByType image/gif A0
-#    ExpiresByType image/png A0
-#    ExpiresByType image/jpeg A0
-#    ExpiresByType text/css A2592000
-#    ExpiresByType text/javascript A2592000
-#    ExpiresByType application/x-javascript A2592000
-#    ExpiresByType text/html A0
-#  </Directory>
-
     # Redirect wiki which was previously at this location
     RewriteEngine On
     RewriteRule ^/wiki/(.*)$ http://wikimediafoundation.org/wiki/$1 [R=301,L]
 
-  <Directory "/usr/local/apache/common/docroot/www.wikimedia.org/w">
+  <Directory "/srv/deployment/mediawiki/common/docroot/www.wikimedia.org/w">
    <IfModule mod_php5.c>
     php_admin_flag engine on
    </IfModule>
   </Directory>
-
-#  <Directory "/usr/local/apache/htdocs/wikimedia/w">
-#   <IfModule mod_php5.c>
-#    php_admin_flag engine on
-#   </IfModule>
-#   #Deny from env=bad_bots
-#  </Directory>
-#  <Directory "/usr/local/apache/htdocs/wikimedia/w2">
-#   <IfModule mod_php5.c>
-#    php_admin_flag engine on
-#   </IfModule>
-#   #Deny from env=bad_bots
-#  </Directory>
-#  <Directory "/usr/local/apache/htdocs/wikimedia/ch-portal">
-#   <IfModule mod_php5.c>
-#    php_admin_flag engine on
-#   </IfModule>
-#  </Directory>
-#  <Directory "/usr/local/apache/htdocs/wikimedia/upload">
-#    Options Indexes FollowSymlinks FollowSymlinks
-#    AddType application/octet-stream .html .htm .shtml
-#  </Directory>
-#  <Directory "/usr/local/apache/htdocs/wikimedia/conf">
-#    AddType text/plain .conf
-#  </Directory>
-#  <Directory "/usr/local/apache/htdocs/wikimedia/errors">
-#    Options Indexes
-#    ForceType text/html
-#  </Directory>
 
 </VirtualHost>
 
