Add MIME type for webapp manifest for Firefox OS
In the 'old' Apache config. :)

Change-Id: I0e81a4bd59dd3967c9c48ac6ccbcd600e80b1f0c

--- a/wikimedia.conf
+++ b/wikimedia.conf
@@ -139,6 +139,9 @@
     # Aliases for 1.17 wikis
     Alias /w/extensions-1.17/ /usr/local/apache/common/live-1.5/extensions-1.17/
     Alias /skins-1.17/ /usr/local/apache/common/live-1.5/skins-1.17/
+
+    # Used for Firefox OS web application manifest living on bits.wikimedia.org
+    AddType application/x-web-app-manifest+json .webapp
 </VirtualHost>
 
 # job.w.o
