Add search.wikimedia.org to the main apache pool
Apple dictionary bridge. For RT #4238. Requires I30f600ee.

Change-Id: I8294c4271b68a7896d127d370b31537b943d5aee

--- a/all.conf
+++ b/all.conf
@@ -33,4 +33,7 @@ Include /etc/apache2/wmf/en2.conf
 # A couple of redirects for www.XXX.wikipedia.org
 Include /etc/apache2/wmf/postrewrites.conf
 
+# search.wikimedia.org
+Include /etc/apache2/wmf/search.wikimedia.conf
+
 # vim: syn=apache sts=4 sw=4 autoindent
