(bug 41847) Drop the www. on wikidata.org
This should go together with the appropriate change
in operations/mediawiki-config

Change-Id: Idd686c50dd9d22edc567e26291df632c98d7a7cd

--- a/main.conf
+++ b/main.conf
@@ -52,8 +52,8 @@
 
 # Wikidata
 <VirtualHost *>
-    ServerName www.wikidata.org
-    ServerAlias wikidata.org *.wikidata.org
+    ServerName wikidata.org
+    ServerAlias *.wikidata.org
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
