add redirect for www.wikidata to wikidata
Change-Id: I81645f82134c628cfa5dd286903e13bfb989af05

--- a/redirects.conf
+++ b/redirects.conf
@@ -489,6 +489,11 @@
     RewriteCond %{HTTP_HOST} \.wikimediafoundation.org$
     RewriteRule ^(.*)$ http://wikimediafoundation.org$1 [R=301,L]
 
+    # wikidata
+    RewriteCond %{HTTP_HOST} (^|\.)wikidata\.org$ [OR]
+    RewriteCond %{HTTP_HOST} \.wikidata.org$
+    RewriteRule ^(.*)$ http://wikidata.org$1 [R=301,L]
+
     # Bookshelf Project
     RewriteCond %{HTTP_HOST} =bookshelf.wikimedia.org
     RewriteRule ^/(.*)$ http://outreach.wikimedia.org/wiki/Bookshelf/$1 [R=302,L]
