commenting wikidata redirect , redirect loop
Change-Id: I92b98737cef778c41fab05863458a9db1e647ac0

--- a/redirects.conf
+++ b/redirects.conf
@@ -491,9 +491,9 @@
     RewriteRule ^(.*)$ http://wikimediafoundation.org$1 [R=301,L]
 
     # wikidata
-    RewriteCond %{HTTP_HOST} (^|\.)wikidata\.org$ [OR]
-    RewriteCond %{HTTP_HOST} \.wikidata.org$
-    RewriteRule ^(.*)$ http://wikidata.org$1 [R=301,L]
+    # RewriteCond %{HTTP_HOST} (^|\.)wikidata\.org$ [OR]
+    # RewriteCond %{HTTP_HOST} \.wikidata.org$
+    # RewriteRule ^(.*)$ http://wikidata.org$1 [R=301,L]
 
     # Bookshelf Project
     RewriteCond %{HTTP_HOST} =bookshelf.wikimedia.org
