fix wikidata redirect, for real, sry
Change-Id: I4035c527e0e64b027f5a3a8e73ca7b56eb943c53

--- a/redirects.conf
+++ b/redirects.conf
@@ -54,7 +54,7 @@
         wikibooks.de www.wikibooks.de *.wikibooks.com \
         wikibooks.cz *.wikibooks.cz \
         wikicitaty.cz *.wikicitaty.cz \
-        wikidata.org *.wikidata.org \
+        *.wikidata.org \
         wikidisclosure.com *.wikidisclosure.com \
         wikidisclosure.org *.wikidisclosure.org \
         wikidruhy.cz *.wikidruhy.cz \
