revert the whole www dropping for wikidata, cant have it due to the way bits works
Change-Id: Ie68957b94b1295206b1ca09772e60c5d0732e0b3

--- a/main.conf
+++ b/main.conf
@@ -52,8 +52,8 @@
 
 # Wikidata
 <VirtualHost *>
-    ServerName wikidata.org
-    ServerAlias *.wikidata.org
+    ServerName www.wikidata.org
+    ServerAlias wikidata.org *.wikidata.org
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
