Fix 404s for nonexistent domains
When a page is requested on a nonexistent domain, return an informative
error message instead of

"The requested URL /w/index.php was not found on this server.
Additionally, a 404 Not Found error was encountered while trying to use
an ErrorDocument to handle the request."

as was recently seen for about 10% of all wikidata.org and wikivoyage.org
requests due to a handful of apaches having a stale configuration.

Change-Id: I154aeee19710d64574c3f86bcc0f0156b1edf9e0

--- a/nonexistent.conf
+++ b/nonexistent.conf
@@ -2,5 +2,6 @@
 <VirtualHost *>
     DocumentRoot "/usr/local/apache/common/docroot/default"
     ServerName nonexistent
+    ErrorDocument 404 /index.html
 </VirtualHost>
 
