add wikivoyager.org|.de redirects to wikivoyage - RT-4333
Change-Id: I78df51da99a7e6132129f3873e3cd732fe780a36

--- a/redirects.conf
+++ b/redirects.conf
@@ -108,6 +108,8 @@
         wikivoyage.com *.wikivoyage.com \
         wikivoyage.de *.wikivoyage.de \
         wikivoyage.net *.wikivoyage.net \
+        wikivoyager.org *.wikivoyager.org \
+        wikivoyager.de *.wikivoyager.de \
         wiki.mediawiki.org \
         wikipedia.info *.wikipedia.info \
         wiktionary.com *.wiktionary.com \
@@ -483,6 +485,15 @@
 
     RewriteCond %{HTTP_HOST} =wikivoyage.net
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+
+    # Wikivoyager (RT-4333)
+    RewriteCond %{HTTP_HOST} (.+)\.wikivoyager.(org|de)
+    RewriteCond %{HTTP_HOST} =wikivoyager.org$
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]$
+    RewriteCond %{HTTP_HOST} =wikivoyager.de$
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]$
+
+
 
     # wikimediafoundation
     RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net)$ [OR]
