fix wikivoyager.org/.de redirects
Change-Id: Ia4dc01f32c25e59447298373db046af5f5df60fc

--- a/redirects.conf
+++ b/redirects.conf
@@ -487,11 +487,14 @@
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
     # Wikivoyager (RT-4333)
-    RewriteCond %{HTTP_HOST} (.+)\.wikivoyager.(org|de)
+    RewriteCond %{HTTP_HOST} (.+)\.wikivoyager.(org|de)$
+    RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
+
     RewriteCond %{HTTP_HOST} =wikivoyager.org$
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]$
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
+
     RewriteCond %{HTTP_HOST} =wikivoyager.de$
-    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]$
+    RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
 
 
