meh, trailing $ has gotta go from this redirect rule
Change-Id: Ia3f8560130f222773ab1a2a3b9a8be9c69d83951

--- a/redirects.conf
+++ b/redirects.conf
@@ -490,10 +490,10 @@
     RewriteCond %{HTTP_HOST} (.+)\.wikivoyager.(org|de)$
     RewriteRule ^(.*)$ http://%1.wikivoyage.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} =wikivoyager.org$
+    RewriteCond %{HTTP_HOST} =wikivoyager.org
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} =wikivoyager.de$
+    RewriteCond %{HTTP_HOST} =wikivoyager.de
     RewriteRule ^(.*)$ http://wikivoyage.org$1 [R=301,L]
 
 
