redirect wikimania.asia to wikimania2013 (RT-4228)
Change-Id: Iaa1b141b078080fd4e94fe871b83d04ad1f11fe9

--- a/redirects.conf
+++ b/redirects.conf
@@ -63,6 +63,7 @@
         wikijunior.net *.wikijunior.net \
         wikijunior.org *.wikijunior.org \
         wikimania.wikimedia.org \
+	wikimania.asia *.wikimania.asia \
         labs.wikimedia.org \
         wikimaps.org *.wikimaps.org \
         wikimaps.com *.wikimaps.com \
@@ -575,6 +576,13 @@
     # Wikimania
     RewriteCond %{HTTP_HOST} =wikimania.wikimedia.org
     RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
+
+    RewriteCond %{HTTP_HOST} (.+)\.wikimania.asia$
+    RewriteRule ^(.*)$ http://%1.wikimania2013.wikimedia.org.org$1 [R=302,L,NE]
+
+    RewriteCond %{HTTP_HOST} =wikimania.asia
+    RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
+
 
     # labs -> labsconsole
     RewriteCond %{HTTP_HOST} =labs.wikimedia.org
