wikimania.asia redirect, there is no *.wikimania2013.wm
Change-Id: I04e1970616006aaf7284b83befdb81140e20a429

--- a/redirects.conf
+++ b/redirects.conf
@@ -578,7 +578,7 @@
     RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} (.+)\.wikimania.asia$
-    RewriteRule ^(.*)$ http://%1.wikimania2013.wikimedia.org.org$1 [R=302,L,NE]
+    RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
 
     RewriteCond %{HTTP_HOST} =wikimania.asia
     RewriteRule ^(.*)$ http://wikimania2013.wikimedia.org$1 [R=302,L,NE]
