Wikidata language code subdomain redirect to ItemByTitle special page
I'm not sure which flags should be set on these. Please check.

 - patch set 2: corrected tabs
 - patch set 3: really corrected tabs, forgot git add... sorry!
 - patch set 4: left one line. Maybe I should get some sleep.

Change-Id: I6b898587da9b48c02259c9206e721bb61e36a3de

--- a/main.conf
+++ b/main.conf
@@ -61,6 +61,18 @@
 
     RewriteEngine On
 
+    # Redirect language subdomains to ItemByTitle special page
+    RewriteCond %{HTTP_HOST} ^(.*)\.wikidata\.org
+    RewriteCond %{HTTP_HOST} !^www\.wikidata\.org
+    RewriteCond %{REQUEST_URI} !^/wiki/$
+    RewriteCond %{HTTPS} on
+    RewriteRule wiki/(.*)$ https://www.wikidata.org/wiki/Special:ItemByTitle/%1wiki/$1
+
+    RewriteCond %{HTTP_HOST} ^(.*)\.wikidata\.org
+    RewriteCond %{HTTP_HOST} !^www\.wikidata\.org
+    RewriteCond %{REQUEST_URI} !^/wiki/$
+    RewriteRule wiki/(.*)$ http://www.wikidata.org/wiki/Special:ItemByTitle/%1wiki/$1
+
     # Make robots.txt editable via Mediawiki:robots.txt
     RewriteRule ^/robots.txt$ /w/robots.php [L]
 
