Adding ServerAlias for wikispecies.net
Change-Id: I00ee534a438f165f3bbd5f43ed813720867e38c2

--- a/redirects.conf
+++ b/redirects.conf
@@ -97,6 +97,7 @@
         wikisource.cz *.wikisource.cz \
         wikispecies.cz *.wikispecies.cz \
         wikispecies.com *.wikispecies.com \
+        wikispecies.net *.wikispecies.net \
         wikispecies.org *.wikispecies.org species.wikipedia.org \
         wikiversity.com *.wikiversity.com \
         wikiversity.cz *.wikiversity.cz \
