Switch LDAP group UUIDs to DNs

--- a/project.config
+++ b/project.config
@@ -7,8 +7,8 @@
 	mergeContent = true
 [access "refs/*"]
 	owner = group Administrators
-	owner = group ops
+	owner = group ldap/ops
 	read = group Anonymous Users
-	label-Code-Review = -1..+1 group wmf
-	submit = group ops
-	create = group ops
+	label-Code-Review = -1..+1 group ldap/wmf
+	submit = group ldap/ops
+	create = group ldap/ops
