(bug 44893) Set up redirect from tartupeedia.ee to a page on etwiki
Change-Id: I56871eebce06a81ef5f73f920ca0805111c47c45

--- a/redirects.conf
+++ b/redirects.conf
@@ -139,7 +139,8 @@
         shop.mediawiki.org store.mediawiki.org \
         shop.wikimediafoundation.org store.wikimediafoundation.org \
         shop.wikipedia.org store.wikipedia.org \
-        wlm.wikimedia.org
+        wlm.wikimedia.org \
+        tartupeedia.ee
 
     # allow caching for redirects
     <IfModule mod_headers.c>
@@ -602,6 +603,10 @@
     # sometime in 2013
     RewriteCond %{HTTP_HOST} =wlm.wikimedia.org
     RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L,NE]
+
+    # tartupeedia.ee (WMEE-owned domain) - https://bugzilla.wikimedia.org/show_bug.cgi?id=44893
+    RewriteCond %{HTTP_HOST} (.*)tartupeedia\.ee$
+    RewriteRule ^(.*)$ https://et.wikipedia.org/wiki/Portaal:Tartupeedia [R=301,L]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
