(bug 44893) Set up redirect from tartupeedia.ee to a page on etwiki
Change-Id: I56871eebce06a81ef5f73f920ca0805111c47c45

--- a/redirects.conf
+++ b/redirects.conf
@@ -46,6 +46,7 @@
         sep11.wikipedia.org \
         sources.wikipedia.org \
         status.wikipedia.org \
+        tartupeedia.ee\
         textbook.wikipedia.org \
         vikimedija.org *.vikimedija.org \
         wicipediacymraeg.org *.wicipediacymraeg.org \
@@ -614,6 +615,10 @@
     # sometime in 2013
     RewriteCond %{HTTP_HOST} =wlm.wikimedia.org
     RewriteRule ^(.*)$ http://toolserver.org/~erfgoed$1 [R=301,L,NE]
+
+    # tartupeedia.ee (WMEE-owned domain) - bug 44893
+    RewriteCond %{HTTP_HOST} (.*)tartupeedia\.ee$
+    RewriteRule ^(.*)$ https://et.wikipedia.org/wiki/Portaal:Tartupeedia [R=301,L]
 
     # Send anything else that matched the ServerAlias to en.wikipedia.org
     RewriteRule ^(.*)$ http://en.wikipedia.org$1 [R=301,L,NE]
