(bug 45005) Redirect wikidata.org to www.wikidata.org
Change-Id: I7bb872fd9cf6c1da7655f77def7f3ce43975218a

--- a/main.conf
+++ b/main.conf
@@ -52,8 +52,9 @@
 
 # Wikidata
 <VirtualHost *>
-    ServerName www.wikidata.org
-    ServerAlias wikidata.org *.wikidata.org
+    ServerName wikidata
+    ServerAlias *.wikidata.org
+    UseCanonicalName off
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
