--- a/main.conf
+++ b/main.conf
@@ -53,7 +53,7 @@
 # Wikidata
 <VirtualHost *>
     ServerName www.wikidata.org
-    ServerAlias wikidata.org *.wikidata.org
+    ServerAlias *.wikidata.org
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
