--- a/redirects.conf
+++ b/redirects.conf
@@ -54,6 +54,7 @@
         wikibooks.de www.wikibooks.de *.wikibooks.com \
         wikibooks.cz *.wikibooks.cz \
         wikicitaty.cz *.wikicitaty.cz \
+        wikidata.org \
         wikidisclosure.com *.wikidisclosure.com \
         wikidisclosure.org *.wikidisclosure.org \
         wikidruhy.cz *.wikidruhy.cz \
@@ -552,6 +553,12 @@
     RewriteCond %{HTTP_HOST} =mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} (^|\.)mediawiki\.com$
     RewriteRule ^(.*)$ http://www.mediawiki.org$1 [R=301,L,NE]
+
+    # bug 45005
+    # redirect wikidata.org to www.wikidata.org
+    # lang code subdomain redirect to be done later
+    RewriteCond %{HTTP_HOST} =wikidata.org
+    RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
     RewriteRule ^(.*)$ http://nostalgia.wikipedia.org$1 [R=301,L,NE]
