(bug 45005) Redirect wikidata.org to www.wikidata.org
Change-Id: I7bb872fd9cf6c1da7655f77def7f3ce43975218a

--- a/redirects.conf
+++ b/redirects.conf
@@ -553,6 +553,9 @@
     RewriteCond %{HTTP_HOST} (^|\.)mediawiki\.com$
     RewriteRule ^(.*)$ http://www.mediawiki.org$1 [R=301,L,NE]
 
+    RewriteCond %{HTTP_HOST} =wikidata.org
+    RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
+
     RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
     RewriteRule ^(.*)$ http://nostalgia.wikipedia.org$1 [R=301,L,NE]
 
