(bug 45005) Redirect wikidata.org to www.wikidata.org
Change-Id: I7bb872fd9cf6c1da7655f77def7f3ce43975218a

--- a/redirects.conf
+++ b/redirects.conf
@@ -54,7 +54,8 @@
         wikibooks.de www.wikibooks.de *.wikibooks.com \
         wikibooks.cz *.wikibooks.cz \
         wikicitaty.cz *.wikicitaty.cz \
-        wikidisclosure.com *.wikidisclosure.com \
+        wikidata.org \
+		wikidisclosure.com *.wikidisclosure.com \
         wikidisclosure.org *.wikidisclosure.org \
         wikidruhy.cz *.wikidruhy.cz \
         wikifamily.com *.wikifamily.com \
@@ -552,6 +553,11 @@
     RewriteCond %{HTTP_HOST} =mediawiki.org [OR]
     RewriteCond %{HTTP_HOST} (^|\.)mediawiki\.com$
     RewriteRule ^(.*)$ http://www.mediawiki.org$1 [R=301,L,NE]
+
+    RewriteCond %{HTTP_HOST} =wikidata.org [OR]
+	RewriteCond %{HTTP_HOST} ^(.+)\.wikidata.org
+    RewriteCond %{HTTP_HOST} !=www.wikidata.org
+	RewriteRule ^(.*)$ http://www.wikidata.org$1 [R=301,L,NE]
 
     RewriteCond %{HTTP_HOST} =nostalgia.wikimedia.org
     RewriteRule ^(.*)$ http://nostalgia.wikipedia.org$1 [R=301,L,NE]
