(bug 45005) Redirect wikidata.org to www.wikidata.org
Bug: 45005
Change-Id: I7bb872fd9cf6c1da7655f77def7f3ce43975218a

--- a/main.conf
+++ b/main.conf
@@ -56,7 +56,7 @@
 # Wikidata
 <VirtualHost *>
     ServerName www.wikidata.org
-    ServerAlias wikidata.org *.wikidata.org
+    ServerAlias *.wikidata.org
 
     DocumentRoot "/usr/local/apache/common/docroot/wikidata"
 
