redirect wikimediafoundation.info -> wmfwiki
Change-Id: Id2554bb4101c99cba599305760f3b0bc40075518
RT: 3542

--- a/redirects.conf
+++ b/redirects.conf
@@ -70,8 +70,9 @@
         wikimedia.lt *.wikimedia.lt \
         wikimedia.biz *.wikimedia.biz \
         wikimediafoundation.com *.wikimediafoundation.com \
-        *.wikimediafoundation.org \
+        wikimediafoundation.info *.wikimediafoundation.info \
         wikimediafoundation.net *.wikimediafoundation.net \
+        *.wikimediafoundation.org \
         wikimediacommons.eu *.wikimediacommons.eu \
         wikimediacommons.co.uk *.wikimediacommons.co.uk \
         wikimediacommons.info *.wikimediacommons.info \
@@ -501,7 +502,7 @@
 
 
     # wikimediafoundation
-    RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net)$ [OR]
+    RewriteCond %{HTTP_HOST} (^|\.)wikimediafoundation\.(com|net|info)$ [OR]
     RewriteCond %{HTTP_HOST} \.wikimediafoundation.org$
     RewriteRule ^(.*)$ http://wikimediafoundation.org$1 [R=301,L]
 
