redirects for wikiartpedia.{biz,co,info,me,mobi,net}
RT: #4240
Change-Id: I0fd3056cb1012c1e0fdaf628afe554356b8afc34

--- a/redirects.conf
+++ b/redirects.conf
@@ -56,6 +56,12 @@
         wikicitaty.cz *.wikicitaty.cz \
         wikidisclosure.com *.wikidisclosure.com \
         wikidisclosure.org *.wikidisclosure.org \
+        wikiartpedia.biz *.wikiartpedia.biz \
+        wikiartpedia.co *.wikiartpedia.co \
+        wikiartpedia.info *.wikiartpedia.info \
+        wikiartpedia.me *.wikiartpedia.me \
+        wikiartpedia.mobi *.wikiartpedia.mobi \
+        wikiartpedia.net *.wikiartpedia.net \
         wikidruhy.cz *.wikidruhy.cz \
         wikifamily.com *.wikifamily.com \
         wikifamily.org *.wikifamily.org \
@@ -269,6 +275,9 @@
     RewriteCond %{HTTP_HOST} =zh-tw.wikipedia.org
     RewriteRule ^(.*)$ http://zh.wikipedia.org$1 [R=301,L,NE]
 
+    # RT #4240
+    RewriteCond %{HTTP_HOST} (^|\.)wikiartpedia\.(biz|co|info|me|mobi|net)$
+    RewriteRule ^(.*)$ http://www.wikipedia.org [R=301,L]
 
     # Wikibooks
 
