add wikimedia.jp.net and wikimediacommons.jp.net server aliases and redirects (RT-4356 etc.)
Change-Id: I9bf4282ee7db453df4464e6925fac8272dd57a2d

--- a/redirects.conf
+++ b/redirects.conf
@@ -75,6 +75,7 @@
         wikimaps.com *.wikimaps.com \
         wikimedia.lt *.wikimedia.lt \
         wikimedia.biz *.wikimedia.biz \
+        wikimedia.jp.net *.wikimedia.jp.net \
         wikimediafoundation.com *.wikimediafoundation.com \
         wikimediafoundation.info *.wikimediafoundation.info \
         wikimediafoundation.net *.wikimediafoundation.net \
@@ -82,6 +83,7 @@
         wikimediacommons.eu *.wikimediacommons.eu \
         wikimediacommons.co.uk *.wikimediacommons.co.uk \
         wikimediacommons.info *.wikimediacommons.info \
+        wikimediacommons.jp.net *.wikimediacommons.jp.net \
         wikimediacommons.net *.wikimediacommons.net \
         wikimediacommons.mobi *.wikimediacommons.mobi \
         wikimediacommons.org *.wikimediacommons.org \
@@ -369,7 +371,7 @@
     RewriteCond %{HTTP_HOST} =wikiversity.info
     RewriteRule ^(.*)$ http://wikiversity.org$1 [R=301,L,NE]
 
-    RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.(net|info|mobi|eu|org)$
+    RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.(net|info|mobi|eu|org|jp\.net)$
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L,NE]
 
     # Localised TLDs
@@ -443,7 +445,7 @@
     RewriteCond %{HTTP_HOST} (^|\.)wikimediacommons.co.uk$
     RewriteRule ^(.*)$ http://commons.wikimedia.org$1 [R=301,L]
 
-    RewriteCond %{HTTP_HOST} (^|\.)wikimedia.biz$
+    RewriteCond %{HTTP_HOST} (^|\.)wikimedia.(biz|jp\.net)$
     RewriteRule ^(.*)$ http://wikimedia.org$1 [R=301,L]
 
     RewriteCond %{HTTP_HOST} (^|\.)wikimedia.lt$
